--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "file-loader": "^0.8.4",
     "postcss-loader": "^0.8.0",
     "postcss-modules": "^0.1.3",
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2",
     "rucksack-css": "^0.8.5",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
